--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div id='stars2'></div>
   <div id='stars3'></div>
   <div id='title'>
-    <span>
+    <!-- <span>
       Hi, I'm Ghelo
     </span>
     <br>
     <br>
     <span>
       Software Developer
-    </span>
+    </span> -->
   </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
